--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "vimfiles\\bundle\\snipmate"]
 	path = vimfiles\\bundle\\snipmate
 	url = https://github.com/msanders/snipmate.vim.git
+[submodule "vimfiles\\bundle\\nerdtree"]
+	path = vimfiles\\bundle\\nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
+[submodule "vimfiles\\bundle\\vim-fugitive"]
+	path = vimfiles\\bundle\\vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
