--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
-[submodule "vimfiles\\bundle\\vim-javascript"]
-	path = vimfiles\\bundle\\vim-javascript
+[submodule "vimfiles/bundle/vim-javascript"]
+	path = vimfiles/bundle/vim-javascript
 	url = https://github.com/pangloss/vim-javascript.git
-[submodule "vimfiles\\bundle\\vim-jade"]
-	path = vimfiles\\bundle\\vim-jade
+[submodule "vimfiles/bundle/vim-jade"]
+	path = vimfiles/bundle/vim-jade
 	url = https://github.com/digitaltoad/vim-jade.git
-[submodule "vimfiles\\bundle\\snipmate"]
-	path = vimfiles\\bundle\\snipmate
+[submodule "vimfiles/bundle/snipmate"]
+	path = vimfiles/bundle/snipmate
 	url = https://github.com/msanders/snipmate.vim.git
-[submodule "vimfiles\\bundle\\nerdtree"]
-	path = vimfiles\\bundle\\nerdtree
+[submodule "vimfiles/bundle/nerdtree"]
+	path = vimfiles/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
-[submodule "vimfiles\\bundle\\vim-fugitive"]
-	path = vimfiles\\bundle\\vim-fugitive
+[submodule "vimfiles/bundle/vim-fugitive"]
+	path = vimfiles/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
