--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vimfiles/bundle/vim-fugitive"]
 	path = vimfiles/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "vimfiles/bundle/snipmate-nodejs"]
+	path = vimfiles/bundle/snipmate-nodejs
+	url = https://github.com/jamescarr/snipmate-nodejs.git
